# remote_debugging_example_project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
db/: schema.sql
db/migrations/: 20210118063411_create_tables.sql
remote_debugging/: __init__.py  app.py
remote_debugging/api/: health.py  sample.py
remote_debugging/store/: __init__.py  models.py  repos.py
remote_debugging/utils/: config.py  flask.py  schema.py
tests/: conftest.py  test_api.py
