[tool.poetry]
name = "remote_debugging_example_project"
version = "0.1.0"
description = ""
authors = ["Pratik Singh <pratiksjv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blinker = "1.4"
flask = "1.1.2"
flask-sqlalchemy = "2.4.4"
psycopg2-binary = "2.8.5"
requests = "2.24.0"
sqlalchemy = "1.3.18"
stringcase = "1.2.0"
structlog = "20.1.0"
voluptuous = "0.11.7"
dnspython = "1.16.0"
flask-keepincheck = "0.1"
sqlalchemy-uuidstr = "^0.0.2"

[tool.poetry.dev-dependencies]
colorama = "0.4.3"
pytest = "5.4.3"
pytest-cov = "2.10.0"
pytest-flask = "1.0.0"
pytest-pep8 = "1.0.6"
pytest-runner = "5.2"
responses = "0.10.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
